solved image issue on mobile, and made homepage more mobile friendly

--- a/css/blogstyle.css
+++ b/css/blogstyle.css
@@ -2,7 +2,7 @@
 
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 30vh;
     object-fit: cover;
 }
 
