--- a/css/styles.css
+++ b/css/styles.css
@@ -11142,7 +11142,7 @@ body {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.5rem;
   line-height: 1.5rem;
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.5rem;
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -11310,3 +11310,4 @@ body {
 #wally {
   text-decoration: line-through;
 }
+
